image fix on small devices

--- a/main.css
+++ b/main.css
@@ -291,15 +291,14 @@ main {
     max-width: 100%;
 }
 
-@media (max-width: 768px) {
-    .panel-block-content img {
-        max-width: 50%;
-        max-height: fit-content;
-    }
-}
-
 .poster {
     height: 700px;
+}
+
+@media (max-width: 768px) {
+    .poster {
+        height: 400px;
+    }
 }
 
 .default-layout {
